--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,5 @@ Imports:
     fixest
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+URL: https://github.com/rtgodwin/resetGLM
+BugReports: https://github.com/rtgodwin/resetGLM/issues
